@@ -27,6 +27,7 @@ Data Changes:
 - When taking Practice Practice Practice in a skill that can potentially be used in tandem with a weapon, its effect on said weapon's accuracy is now properly reflected in the program. Existing characters with this quality will need to re-add the quality or reapply improvements to see this bonus.
 - Natural Hacker now properly prompts the user as to which Matrix action it should affect. Existing characters with this quality will need to re-add the quality or reapply improvements to see this bonus.
 - Resonant Burnout now properly increases all Resonance burn effects from lost Essence by 20%. Existing characters with this quality will need to re-add the quality or reapply improvements to see this bonus.
+- HK Urban Combat and HK Urban Fighter can properly no longer accept any modifications or accessories. The HK Urban Fighter now also properly cannot accept regular Spare Clips, needing instead its own, special versions with higher cost and availability.
 
 Changed/New Strings:
 - LimitCondition_SoldierParagon
